--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           imageUrl: '' + stiker4.src,
         });
 
-        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>Tapi... Aku akan berusaha yang terbaik buat kamu kok 🥰";
-        katangetik2 = "<i>I Love uuu more</i> 💐🫣🩷";
+        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>
+        katangetik2 = "<i>I Love uuu </i> 🥀";
 
         setTimeout(kpemb, 200);
       }
