--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       async function pesan() {
         await swalst.fire({
-          title: 'Hii Kamuu! 😍',
+          title: 'Hii Sipaa! 😍',
           imageUrl: '' + stiker1.src,
         });
 
