--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           imageUrl: '' + stiker4.src,
         });
 
-        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>Tapi... Aku akan berusaha yang terbaik buat kamu kok 🥰";
+        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>kt sllu m berfikir bgmna kt mb chat akng p ng😭 <br><br>Pertama kli kt bgni😭";
         katangetik2 = "<i>I Love uuu Sipaa</i> 💐🫣🩷";
 
         setTimeout(kpemb, 200);
