--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         });
 
         await swalst.fire({
-          title: 'Maaf ya Kalo Aku<br>Suka Bikin jijik?🫠',
+          title: 'Maaf ya Kalo Aku<br>kurang effort🥺🫠',
           imageUrl: '' + stiker2.src,
         });
 
