--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           imageUrl: '' + stiker4.src,
         });
 
-        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>kt sllu m berfikir bgmna kt mb chat akng p sipaa, tiap hari overthinking😭 <br><br>Pertama kli kt bgni😭";
+        katangetik = "<b class='putih merah fontalt'>Maaf yaa</b> aku belum bisa jadi<br>yang terbaik buat kamu,<br><br>Aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya buat orang sespesial kamu,<br><br>kt sllu m berfikir bgmna kt mb chat akng p sipaa, tiap hari overthinking😭 <br><br>Pertama kli kt bgni😭 <br><br>Bagusan Website yg lalu atw ini?";
         katangetik2 = "<i>I Love uuu Sipaa</i> 💐🫣🩷";
 
         setTimeout(kpemb, 200);
