--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <audio src="https://audio.jukehost.co.uk/6ChmULhgQ6hNXFsqBZsiVr1ymMcBXCNI" id="linkmp3" class="sembunyi"></audio>
 
   <div id="bodyblur">
-    <!-- Wallpaper / Background --><img src="https://pin.it/66ksKkPNJ" id="wallpaper" />
+    <!-- Wallpaper / Background --><img src="https://github.com/PurpPurin24/Angelbabymp3_purppurin/blob/main/933d1b8dfbedb07d5f0a531b04ad8e4d.jpg" id="wallpaper" />
   </div>
 
   <div id='Content'>
@@ -120,8 +120,8 @@
       setTimeout(kalimatakhir, 200); ftganti = 0; fthilang();
     }
 
-    tompositif = "Mau";
-    tomnegatif = "Gamau";
+    tompositif = "Suka";
+    tomnegatif = "Nimau";
     async function aksibalas() {
       var { isConfirmed: prtanya } = await swals.fire({
         title: 'Suka Surprise? 🤭❤️',
