--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link href="https://htmlku.com/kamutau/play/style.css" rel="stylesheet" type="text/css" />
 
 <head>
-<title>Script HTML Dari Aku Untukmu - feeldream</title>
+<title>For Sipaaaa</title>
 </head>
 <body>
 	
