--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   imageUrl: '' + stiker5.src,
                   });
                   
-                  katangetik = "<b class='putih merah fontalt'>Awkwkwk 😝</b><br><br><b>Terakhir deh,<br>Mie Mie Apa yang Ngangenin? 🫣<br>-<br>Miekirin Cewe Aku yang<br>Cantik ini dongggg 😋<br>-<br>I Love You Forever 💐🤍🫶</b>";
+                  katangetik = "<b class='putih merah fontalt'>Awkwkwk 😝</b><br><br><b>Terakhir deh,<br>Mie Mie Apa yang Ngangenin? 🫣<br>-<br>Miekirin sipaa yang<br>Cantik ini dongggg 😋<br>-<br>I Love You Forever 💐🤍🫶</b>";
                   
                  setTimeout(kpemb,200);
             }
