--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>"mencintaimu Memang nyata tapi memilikimu hanyalah hayalan semata"</p>
     </div>
     <audio id="myAudio">
-        <source src="https://audio.jukehost.co.uk/iujGFJb0p3JDBNDlfMt8gbOZNYwiDULC" type="audio/mpeg">
+        <source src="https://github.com/PurpPurin24/Angelbabymp3_purppurin/blob/46fad9e3471128c2f92300a70c7bfef1eb727098/ssstik.io_1717727002090.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <script>
