--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
         .container {
             max-width: 600px;
         }
-        .sembunyi {
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -29,8 +26,8 @@
         <p>حبك حقيقي ولكن وجودك مجرد خیال</p>
         <p>"mencintaimu Memang nyata tapi memilikimu hanyalah hayalan semata"</p>
     </div>
-    <audio id="myAudio">
-        <source src="https://github.com/PurpPurin24/Angelbabymp3_purppurin/blob/46fad9e3471128c2f92300a70c7bfef1eb727098/ssstik.io_1717727002090.mp3" type="audio/mpeg">
+    <audio id="myAudio" autoplay>
+        <source src="audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <script>
