--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div class="container">
-        <p>حبك حقيقي ولكن وجودك مجرد خیال</p>
-        <p>"mencintaimu Memang nyata tapi memilikimu hanyalah hayalan semata"</p>
+        <p>aer laut rasa apa jo? </p>
+        <p>"Asing Kang? "</p>
     </div>
     <audio id="myAudio" autoplay>
         <source src="audio.mp3" type="audio/mpeg">
