--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <p>aer laut rasa apa jo? </p>
-        <p>"Asing Kang? "</p>
+        <p>Asing Kang?🥲</p>
     </div>
     <audio id="myAudio" autoplay>
         <source src="audio.mp3" type="audio/mpeg">
