--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="container">
         <p>aer laut rasa apa jo? </p>
         <p>Asing Kang?🥲</p>
+        <br> 
+        <p>kt nd tau cri topik,</p>
+        <p>s mlu kt mb chat :(</p>
     </div>
     <audio id="myAudio" autoplay>
         <source src="audio.mp3" type="audio/mpeg">
