--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <p>aer laut rasa apa jo? </p>
         <p>Asing Kang?🥲</p>
         <br> 
-        <p>kt nd tau cri topik,</p>
-        <p>s mlu kt mb chat :(</p>
+        <p>kt nd tau cri topik :( </p>
     </div>
     <audio id="myAudio" autoplay>
         <source src="audio.mp3" type="audio/mpeg">
